# Authentication

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: _db_filing.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/routers/: __init__.py  shemas.py
app/api/v1/routers/client/: __init__.py  jwt.py
app/api/v1/routers/service/: __init__.py  jwt.py
app/core/: config.py  security.py
app/db/: base.py  crud.py  crud_service.py  models.py
app/db/models/: service.py
app/dependencies/auth/: jwt.py
app/tokens/: jwt.py
