[tool.poetry]
name = "authentication"
version = "0.1.0"
description = ""
authors = ["EliseyGodX"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
patisson-applauncher = { git = "https://github.com/Patisson-Company/_AppLauncher", extras = [
    "async_fastapi_pack",
] }
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
patisson-request = { git = "https://github.com/Patisson-Company/_Request" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
